--- a/hw1/docs/hw1_report_tables/q2_capm_ew.tex
+++ b/hw1/docs/hw1_report_tables/q2_capm_ew.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrr}
 \toprule
-decile & $\alpha$ & $\beta$ & $se_\alpha$ & $se_\beta$ & $t_\alpha$ & $t_\beta$ \\
+decile & alpha & beta & se\_alpha & se\_beta & t\_alpha & t\_beta \\
 \midrule
 1 & 0.2950 & 0.1331 & 0.4141 & 0.0933 & 0.7124 & 1.4270 \\
 2 & 0.5623 & 0.1002 & 0.3000 & 0.0676 & 1.8741 & 1.4830 \\
