--- a/hw1/docs/hw1_report_tables/q2_capm_rw.tex
+++ b/hw1/docs/hw1_report_tables/q2_capm_rw.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrr}
 \toprule
-decile & $\alpha$ & $\beta$ & $se_\alpha$ & $se_\beta$ & $t_\alpha$ & $t_\beta$ \\
+decile & alpha & beta & se\_alpha & se\_beta & t\_alpha & t\_beta \\
 \midrule
 1 & 0.4479 & 0.1180 & 0.3780 & 0.0851 & 1.1849 & 1.3860 \\
 2 & 0.5624 & 0.1031 & 0.2951 & 0.0664 & 1.9061 & 1.5521 \\
