--- a/hw1/docs/hw1_report_tables/q4_horizon_ew_full.tex
+++ b/hw1/docs/hw1_report_tables/q4_horizon_ew_full.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrr}
 \toprule
-$\tau$ & $\alpha_{FF3}$ & $t$-stat ($\alpha_{FF3}$) \\
+tau & ff\_alpha & t\_stat \\
 \midrule
 1 & 0.6154 & 1.5047 \\
 2 & 0.3251 & 0.8701 \\
