--- a/hw1/docs/hw1_report_tables/q2_capm_vw.tex
+++ b/hw1/docs/hw1_report_tables/q2_capm_vw.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrr}
 \toprule
-decile & $\alpha$ & $\beta$ & $se_\alpha$ & $se_\beta$ & $t_\alpha$ & $t_\beta$ \\
+decile & alpha & beta & se\_alpha & se\_beta & t\_alpha & t\_beta \\
 \midrule
 1 & 0.2962 & 0.1286 & 0.4110 & 0.0925 & 0.7206 & 1.3900 \\
 2 & 0.5532 & 0.0986 & 0.2983 & 0.0672 & 1.8543 & 1.4674 \\
