--- a/hw1/docs/hw1_report_tables/q4_horizon_small.tex
+++ b/hw1/docs/hw1_report_tables/q4_horizon_small.tex
@@ -1,12 +1,12 @@
-\begin{tabular}{lrrrr}
+\begin{tabular}{lrrrrrr}
 \toprule
-$\tau$ & EW $\alpha$ & EW t-stats & VW $\alpha$ & VW t-stats \\
+tau & EW $\alpha$ & EW $t$ & VW $\alpha$ & VW $t$ & RW $\alpha$ & RW $t$ \\
 \midrule
-1 & 0.6154 & 1.5047 & 0.5946 & 1.4680 \\
-3 & 0.2819 & 0.7539 & 0.2545 & 0.6942 \\
-6 & 0.1056 & 0.3075 & 0.0691 & 0.2096 \\
-12 & -0.3446 & -1.0857 & -0.3452 & -1.1921 \\
-24 & -0.5994 & -2.2358 & -0.5138 & -2.2861 \\
-36 & -0.3051 & -1.2068 & -0.2175 & -1.1093 \\
+1 & 0.6154 & 1.5047 & 0.5946 & 1.4680 & 0.4517 & 1.1600 \\
+3 & 0.2819 & 0.7539 & 0.2545 & 0.6942 & 0.2151 & 0.6098 \\
+6 & 0.1056 & 0.3075 & 0.0691 & 0.2096 & 0.0789 & 0.2498 \\
+12 & -0.3446 & -1.0857 & -0.3452 & -1.1921 & -0.3114 & -1.0934 \\
+24 & -0.5994 & -2.2358 & -0.5138 & -2.2861 & -0.4823 & -2.1609 \\
+36 & -0.3051 & -1.2068 & -0.2175 & -1.1093 & -0.2181 & -1.1591 \\
 \bottomrule
 \end{tabular}
